# learn_opengl

./: .gitignore  CMakeLists.txt  build.py  pyproject.toml  vcpkg.json  vcpkg_install.sh
lib/: CMakeLists.txt
lib/include/omgl/: glfw.hpp  io.hpp  shaders.hpp
lib/src/omgl/: glfw.cpp  shaders.cpp
src/: CMakeLists.txt
src/first_try/: CMakeLists.txt  main.cpp
src/hello_shaders/: CMakeLists.txt  main.cpp
src/hello_shaders/shaders/: moving_triangle.vert  triangle_basic.frag  triangle_basic.vert
src/hello_triangle/: CMakeLists.txt  main.cpp
src/hello_triangle/shaders/: vertex_shader.vert
src/shaders_deeper/: CMakeLists.txt  main.cpp
src/square/: CMakeLists.txt  main.cpp
